--- a/login.html
+++ b/login.html
@@ -200,7 +200,7 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch(`http://localhost:3000/api/auth/login`, {
+            const response = await fetch(`${config.API_URL}/api/auth/login`, {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({email, password})
