--- a/signup.html
+++ b/signup.html
@@ -195,6 +195,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./js/config.js"></script>
     <script>
         // JavaScript to dynamically change the background image
         document.addEventListener('DOMContentLoaded', function () {
@@ -236,7 +237,7 @@
                 return;
             }
 
-            const response = await fetch('http://localhost:3000/api/auth/register', {
+            const response = await fetch(`${config.API_URL}/api/auth/register`, {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({username, email, password})
