updating URLs of pages

--- a/checkout.html
+++ b/checkout.html
@@ -147,6 +147,7 @@
     <div id="footer-container" class="mt-5"></div> <!-- Placeholder for dynamic footer -->
 
     <!-- Scripts -->
+     <script src="./js/config.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script>
