--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -21,7 +21,7 @@
 
     <!-- Reusable Footer -->
     <div id="footer-container"></div>
-
+    <script src="./js/config.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
