--- a/add-to-Cart.html
+++ b/add-to-Cart.html
@@ -92,6 +92,7 @@
     <div id="footer-container"></div>
 
     <!-- Scripts -->
+     <script src="./js/config.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
