--- a/admin/index.html
+++ b/admin/index.html
@@ -100,6 +100,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/admin.js"></script>
+    <script src="../js/config.js"></script>
     <script>
         // JavaScript to dynamically change the background image
         document.addEventListener('DOMContentLoaded', function () {
@@ -134,7 +135,7 @@
             const password = document.getElementById("password").value;
 
             try {
-                const response = await fetch("http://localhost:3000/admin/login", {
+                const response = await fetch(`${config.API_URL}/admin/login`, {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ email, password }),
