--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
 <script src="scripts.js"></script>
 <script src="js/cart.js"></script>
+<script src="./js/config.js"></script>
 <script>
     function loadFileIntoElement(url, elementId, callback) {
         fetch(url)
@@ -162,7 +163,7 @@
     });
 
     function fetchAndDisplayDashboardProducts() {
-        fetch('http://localhost:3000/api/products')
+        fetch(`${confi.API_URL}/api/products`)
             .then(response => {
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
@@ -219,7 +220,7 @@
             return;
         }
 
-        fetch(`http://localhost:3000/api/cart/${userId}`, {
+        fetch(`${config.API_URL}/api/cart/${userId}`, {
             headers: {
                 'Authorization': `Bearer ${localStorage.getItem('authToken')}`,
             }
@@ -241,7 +242,7 @@
             return;
         }
 
-        fetch('http://localhost:3000/api/cart/add', {
+        fetch(`${config.API_URL}/api/cart/add`, {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
