--- a/user-Profile.html
+++ b/user-Profile.html
@@ -82,6 +82,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/config.js"></script>
     <script>
         // Load dynamic header and footer
         $(function () {
@@ -92,7 +93,7 @@
         // Fetch user profile data on page load
         document.addEventListener('DOMContentLoaded', async function () {
             try {
-                const response = await fetch('http://localhost:3000/api/auth/profile', {
+                const response = await fetch(`${config.API_URL}/api/auth/profile`, {
                     method: 'GET',
                     headers: {
                         'Authorization': `Bearer ${localStorage.getItem('authToken')}`,
@@ -119,7 +120,7 @@
             const password = document.getElementById('password').value;
 
             try {
-                const response = await fetch('http://localhost:3000/api/auth/profile', {
+                const response = await fetch(`${Config.API_URL}/api/auth/profile`, {
                     method: 'PUT',
                     headers: {
                         'Authorization': `Bearer ${localStorage.getItem('authToken')}`,
@@ -142,6 +143,7 @@
         }
     </script>
     <script src="./scripts.js"></script>
+    
 </body>
 
 </html>
