--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     });
 
     function fetchAndDisplayDashboardProducts() {
-        fetch(`${confi.API_URL}/api/products`)
+        fetch(`${config.API_URL}/api/products`)
             .then(response => {
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
@@ -180,7 +180,7 @@
                             <div class="product_box">
                                 <h4 class="bursh_text">${product.name}</h4>
                                 <p class="lorem_text">${product.description}</p>
-                                <img src="http://localhost:3000${product.image}" class="image_1" alt="${product.name}" />
+                                <img src="${config.API_URL}${product.image}" class="image_1" alt="${product.name}" />
                                 <div class="btn_main">
                                     <div class="buy_bt">
                                         <ul>
