adding carusal images/content

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h1 class="banner_taital">Beauty <br />Kit</h1>
-                            <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+                            <h1 class="banner_taital">Whitening <br />Serum</h1>
+                            <!-- <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p> -->
                         </div>
                         <div class="col-sm-6">
                             <div class="banner_img">
-                                <img src="images/banner-img.png" />
+                                <img src="./images/Serum 1.jpg" />
                             </div>
                         </div>
                     </div>
@@ -87,12 +87,27 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h1 class="banner_taital">Beauty <br />Brush</h1>
-                            <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+                            <h1 class="banner_taital">Brightening <br />FaceWash</h1>
+                            <!-- <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p> -->
                         </div>
                         <div class="col-sm-6">
                             <div class="banner_img">
-                                <img src="images/banner-img.png" />
+                                <img src="./images/BRIGHTENING FACE WASH.jpg" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h1 class="banner_taital">SunBlock <br />Cream</h1>
+                            <!-- <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p> -->
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="banner_img">
+                                <img src="./images/SUN BLOCK CREAM.jpg" />
                             </div>
                         </div>
                     </div>
