--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="banner_img">
-                                <img src="./images/Serum 1.jpg" />
+                                <img src="./images/Serum 1.png" />
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6">
                             <h1 class="banner_taital">Brightening <br />FaceWash</h1>
-                            <!-- <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p> -->
+                            <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
                         </div>
                         <div class="col-sm-6">
                             <div class="banner_img">
@@ -103,7 +103,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <h1 class="banner_taital">SunBlock <br />Cream</h1>
-                            <!-- <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p> -->
+                            <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
                         </div>
                         <div class="col-sm-6">
                             <div class="banner_img">
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Add more carousel items here -->
         </div>
     </div>
