--- a/footer.html
+++ b/footer.html
@@ -24,19 +24,19 @@
                     <li>
                       <a href="#">
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
-                        <span class="padding_left10">Address : Loram Ipusm</span>
+                        <span class="padding_left10">Address : House No. 512, Samanabad Town Lahore</span>
                       </a>
                     </li>
                     <li>
                       <a href="#">
                         <i class="fa fa-phone" aria-hidden="true"></i>
-                        <span class="padding_left10">Call : +01 1234567890</span>
+                        <span class="padding_left10">Call : +923272994999</span>
                       </a>
                     </li>
                     <li>
                       <a href="#">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span class="padding_left10">Email : demo@gmail.com</span>
+                        <span class="padding_left10">Email : anayaorganics04@gmail.com</span>
                       </a>
                     </li>
                   </ul>
@@ -44,13 +44,18 @@
               </div>
               <div class="col-sm-4">
                 <div class="footer_logo_1">
-                  <a href="index.html"><img src="images/footer-logo.png" /></a>
+                  <h2>Information</h2>
                 </div>
-                <p class="dummy_text">
-                  commodo consequat. Duis aute irure dolor in reprehenderit in
-                  voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                  Excepteur sint occaecat cupidatat non
-                </p>
+                <ul>
+                  <li>About Us</li>
+                  <li>Contact Us</li>
+                  <li>Privacy Policy</li>
+                  <li>Shipping Terms</li>
+                  <li>Delivery & Exchange Information</li>
+                  <li>Social Media T&Cs</li>
+                  <li>Terms And Conditions</li>
+                  <li></li>
+                </ul>
               </div>
               <div class="col-sm-4">
                 <div class="main">
@@ -87,8 +92,8 @@
     <div class="copyright_section">
         <div class="container">
           <p class="copyright_text">
-            2024 All Rights Reserved. Design by
-            <a href="https://html.design">Free html Templates</a>
+            2024 All Rights Reserved.
+            <a href="https://html.design"></a>
           </p>
         </div>
     </div>
