--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,96 +8,64 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
 </head>
+
 <body>
     <!-- Footer Section Start -->
     <div class="footer_section layout_padding">
         <div class="container">
-          <div class="footer_logo">
-            <a href="index.html"><img src="images/footer-logo.png" /></a>
-          </div>
-          <div class="contact_section_2">
-            <div class="row">
-              <div class="col-sm-4">
-                <h3 class="address_text">Contact Us</h3>
-                <div class="address_bt">
-                  <ul>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-map-marker" aria-hidden="true"></i>
-                        <span class="padding_left10">Address : House No. 512, Samanabad Town Lahore</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-phone" aria-hidden="true"></i>
-                        <span class="padding_left10">Call : +923272994999</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span class="padding_left10">Email : anayaorganics04@gmail.com</span>
-                      </a>
-                    </li>
-                  </ul>
+            <div class="footer_content">
+                <div class="footer_column">
+                    <h3>Contact Us</h3>
+                    <ul class="contact_info">
+                        <li><i class="fa fa-map-marker" aria-hidden="true"></i> House No. 512, Samanabad Town Lahore</li>
+                        <li><i class="fa fa-phone" aria-hidden="true"></i> +923272994999</li>
+                        <li><i class="fa fa-envelope" aria-hidden="true"></i> anayaorganics04@gmail.com</li>
+                    </ul>
                 </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="footer_logo_1">
-                  <h2>Information</h2>
+                <div class="footer_column">
+                    <h3>Information</h3>
+                    <ul class="footer_links">
+                        <li>About Us</li>
+                        <li>Contact Us</li>
+                        <li>Privacy Policy</li>
+                        <li>Shipping Terms</li>
+                        <li>Delivery & Exchange Information</li>
+                        <li>Social Media T&Cs</li>
+                        <li>Terms And Conditions</li>
+                    </ul>
                 </div>
-                <ul>
-                  <li>About Us</li>
-                  <li>Contact Us</li>
-                  <li>Privacy Policy</li>
-                  <li>Shipping Terms</li>
-                  <li>Delivery & Exchange Information</li>
-                  <li>Social Media T&Cs</li>
-                  <li>Terms And Conditions</li>
-                  <li></li>
-                </ul>
-              </div>
-              <div class="col-sm-4">
-                <div class="main">
-                  <h3 class="address_text">Best Products</h3>
-                  <p class="ipsum_text">
-                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                    cupidatat non
-                  </p>
+                <div class="footer_column">
+                    <h3>Best Products</h3>
+                    <ul class="footer_links">
+                        <li>Whitening Serum</li>
+                        <li>Brightening Face Wash</li>
+                        <li>Anti-Acne Face Wash</li>
+                        <li>Sun Block Cream</li>
+                    </ul>
                 </div>
-              </div>
             </div>
-          </div>
-          <div class="social_icon">
-            <ul>
-              <li>
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-              </li>
-            </ul>
-          </div>
+
+            <div class="social_icons">
+                <ul>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <!-- Footer Section End -->
-    
+
     <!-- Copyright Section Start -->
     <div class="copyright_section">
         <div class="container">
-          <p class="copyright_text">
-            2024 All Rights Reserved.
-            <a href="https://html.design"></a>
-          </p>
+            <p class="copyright_text">2024 All Rights Reserved. <a href="https://html.design"></a></p>
         </div>
     </div>
     <!-- Copyright Section End -->
 </body>
+
 </html>
