--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,62 +9,66 @@
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
 </head>
-
 <body>
     <!-- Footer Section Start -->
     <div class="footer_section layout_padding">
         <div class="container">
-            <div class="footer_content">
-                <div class="footer_column">
-                    <h3>Contact Us</h3>
-                    <ul class="contact_info">
-                        <li><i class="fa fa-map-marker" aria-hidden="true"></i> House No. 512, Samanabad Town Lahore</li>
-                        <li><i class="fa fa-phone" aria-hidden="true"></i> +923272994999</li>
-                        <li><i class="fa fa-envelope" aria-hidden="true"></i> anayaorganics04@gmail.com</li>
-                    </ul>
-                </div>
-                <div class="footer_column">
-                    <h3>Information</h3>
-                    <ul class="footer_links">
-                        <li>About Us</li>
-                        <li>Contact Us</li>
-                        <li>Privacy Policy</li>
-                        <li>Shipping Terms</li>
-                        <li>Delivery & Exchange Information</li>
-                        <li>Social Media T&Cs</li>
-                        <li>Terms And Conditions</li>
-                    </ul>
-                </div>
-                <div class="footer_column">
-                    <h3>Best Products</h3>
-                    <ul class="footer_links">
-                        <li>Whitening Serum</li>
-                        <li>Brightening Face Wash</li>
-                        <li>Anti-Acne Face Wash</li>
-                        <li>Sun Block Cream</li>
-                    </ul>
-                </div>
+          <div class="footer_content">
+            <div class="footer_logo">
+              <a href="index.html"><img src="images/footer-logo.png" alt="Footer Logo" /></a>
             </div>
-
-            <div class="social_icons">
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <div class="footer_columns">
+              <div class="footer_column">
+                <h3 class="address_text">Contact Us</h3>
+                <ul class="contact_info">
+                  <li><i class="fa fa-map-marker" aria-hidden="true"></i><span> Address: House No. 512, Samanabad Town Lahore</span></li>
+                  <li><i class="fa fa-phone" aria-hidden="true"></i><span> Call: +923272994999</span></li>
+                  <li><i class="fa fa-envelope" aria-hidden="true"></i><span> Email: anayaorganics04@gmail.com</span></li>
                 </ul>
+              </div>
+              <div class="footer_column">
+                <h3 class="address_text">Information</h3>
+                <ul class="info_links">
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="#">Privacy Policy</a></li>
+                  <li><a href="#">Shipping Terms</a></li>
+                  <li><a href="#">Delivery & Exchange Information</a></li>
+                  <li><a href="#">Social Media T&Cs</a></li>
+                  <li><a href="#">Terms And Conditions</a></li>
+                </ul>
+              </div>
+              <div class="footer_column">
+                <h3 class="address_text">Best Products</h3>
+                <ul class="product_links">
+                  <li><a href="#">Whitening Serum</a></li>
+                  <li><a href="#">Brightening Face Wash</a></li>
+                  <li><a href="#">Anti-Acne Face Wash</a></li>
+                  <li><a href="#">Sun Block Cream</a></li>
+                </ul>
+              </div>
             </div>
+          </div>
+          <div class="social_icons">
+            <ul>
+              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+          </div>
         </div>
     </div>
     <!-- Footer Section End -->
-
+    
     <!-- Copyright Section Start -->
     <div class="copyright_section">
         <div class="container">
-            <p class="copyright_text">2024 All Rights Reserved. <a href="https://html.design"></a></p>
+          <p class="copyright_text">
+            2024 All Rights Reserved. <a href="https://html.design">HTML Design</a>
+          </p>
         </div>
     </div>
     <!-- Copyright Section End -->
 </body>
-
 </html>
