--- a/footer.html
+++ b/footer.html
@@ -13,48 +13,78 @@
     <!-- Footer Section Start -->
     <div class="footer_section layout_padding">
         <div class="container">
-          <div class="footer_content">
-            <div class="footer_logo">
-              <a href="index.html"><img src="images/footer-logo.png" alt="Footer Logo" /></a>
-            </div>
-            <div class="footer_columns">
-              <div class="footer_column">
+          <div class="footer_logo">
+            <a href="index.html"><img src="images/footer-logo.png" /></a>
+          </div>
+          <div class="contact_section_2">
+            <div class="row">
+              <div class="col-sm-4">
                 <h3 class="address_text">Contact Us</h3>
-                <ul class="contact_info">
-                  <li><i class="fa fa-map-marker" aria-hidden="true"></i><span> Address: House No. 512, Samanabad Town Lahore</span></li>
-                  <li><i class="fa fa-phone" aria-hidden="true"></i><span> Call: +923272994999</span></li>
-                  <li><i class="fa fa-envelope" aria-hidden="true"></i><span> Email: anayaorganics04@gmail.com</span></li>
+                <div class="address_bt">
+                  <ul>
+                    <li>
+                      <a href="#">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        <span class="padding_left10">Address : House No. 512, Samanabad Town Lahore</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <span class="padding_left10">Call : +923272994999</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <span class="padding_left10">Email : anayaorganics04@gmail.com</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="footer_logo_1">
+                  <h3 class="address_text">Information</h3>
+                </div>
+                <ul class="ipsum_text">
+                  <li>About Us</li>
+                  <li>Contact Us</li>
+                  <li>Privacy Policy</li>
+                  <li>Shipping Terms</li>
+                  <li>Delivery & Exchange Information</li>
+                  <li>Social Media T&Cs</li>
+                  <li>Terms And Conditions</li>
+                  <li></li>
                 </ul>
               </div>
-              <div class="footer_column">
-                <h3 class="address_text">Information</h3>
-                <ul class="info_links">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">Shipping Terms</a></li>
-                  <li><a href="#">Delivery & Exchange Information</a></li>
-                  <li><a href="#">Social Media T&Cs</a></li>
-                  <li><a href="#">Terms And Conditions</a></li>
-                </ul>
-              </div>
-              <div class="footer_column">
-                <h3 class="address_text">Best Products</h3>
-                <ul class="product_links">
-                  <li><a href="#">Whitening Serum</a></li>
-                  <li><a href="#">Brightening Face Wash</a></li>
-                  <li><a href="#">Anti-Acne Face Wash</a></li>
-                  <li><a href="#">Sun Block Cream</a></li>
-                </ul>
+              <div class="col-sm-4">
+                <div class="main">
+                  <h3 class="address_text">Best Products</h3>
+                  <ul class="ipsum_text">
+                    <li>Whitening Serum</li>
+                    <li>Brightening Face Wash</li>
+                    <li>Anti-Acne Face Wash</li>
+                    <li>Sun Block Cream</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-          <div class="social_icons">
+          <div class="social_icon">
             <ul>
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+              <li>
+                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              </li>
             </ul>
           </div>
         </div>
@@ -65,7 +95,8 @@
     <div class="copyright_section">
         <div class="container">
           <p class="copyright_text">
-            2024 All Rights Reserved. <a href="https://html.design">HTML Design</a>
+            2024 All Rights Reserved.
+            <a href="https://html.design"></a>
           </p>
         </div>
     </div>
