making footer || admin navbars adjustments

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,97 +10,80 @@
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
 </head>
+
 <body>
     <!-- Footer Section Start -->
     <div class="footer_section layout_padding">
         <div class="container">
-          <div class="footer_logo">
-            <a href="index.html"><img src="images/footer-logo.png" /></a>
-          </div>
-          <div class="contact_section_2">
             <div class="row">
-              <div class="col-sm-4">
-                <h3 class="address_text">Contact Us</h3>
-                <div class="address_bt">
-                  <ul>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-map-marker" aria-hidden="true"></i>
-                        <span class="padding_left10">Address : House No. 512, Samanabad Town Lahore</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-phone" aria-hidden="true"></i>
-                        <span class="padding_left10">Call : +923272994999</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span class="padding_left10">Email : anayaorganics04@gmail.com</span>
-                      </a>
-                    </li>
-                  </ul>
+                <!-- Contact Us Column -->
+                <div class="col-md-4">
+                    <h3 class="address_text">Contact Us</h3>
+                    <ul class="list-unstyled address_bt">
+                        <li>
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                            <span class="padding_left10">House No. 512, Samanabad Town Lahore</span>
+                        </li>
+                        <li>
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                            <span class="padding_left10">+923272994999</span>
+                        </li>
+                        <li>
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <span class="padding_left10">anayaorganics04@gmail.com</span>
+                        </li>
+                    </ul>
                 </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="footer_logo_1">
-                  <h3 class="address_text">Information</h3>
+
+                <!-- Information Column -->
+                <div class="col-md-4">
+                    <h3 class="address_text">Information</h3>
+                    <ul class="list-unstyled ipsum_text">
+                        <li><a href="#" class="text-white">About Us</a></li>
+                        <li><a href="#" class="text-white">Contact Us</a></li>
+                        <li><a href="#" class="text-white">Privacy Policy</a></li>
+                        <li><a href="#" class="text-white">Shipping Terms</a></li>
+                        <li><a href="#" class="text-white">Delivery & Exchange Information</a></li>
+                        <li><a href="#" class="text-white">Social Media T&Cs</a></li>
+                        <li><a href="#" class="text-white">Terms And Conditions</a></li>
+                    </ul>
                 </div>
-                <ul class="ipsum_text">
-                  <li>About Us</li>
-                  <li>Contact Us</li>
-                  <li>Privacy Policy</li>
-                  <li>Shipping Terms</li>
-                  <li>Delivery & Exchange Information</li>
-                  <li>Social Media T&Cs</li>
-                  <li>Terms And Conditions</li>
-                  <li></li>
-                </ul>
-              </div>
-              <div class="col-sm-4">
-                <div class="main">
-                  <h3 class="address_text">Best Products</h3>
-                  <ul class="ipsum_text">
-                    <li>Whitening Serum</li>
-                    <li>Brightening Face Wash</li>
-                    <li>Anti-Acne Face Wash</li>
-                    <li>Sun Block Cream</li>
-                  </ul>
+
+                <!-- Best Products Column -->
+                <div class="col-md-4">
+                    <h3 class="address_text">Best Products</h3>
+                    <ul class="list-unstyled ipsum_text">
+                        <li><a href="#" class="text-white">Whitening Serum</a></li>
+                        <li><a href="#" class="text-white">Brightening Face Wash</a></li>
+                        <li><a href="#" class="text-white">Anti-Acne Face Wash</a></li>
+                        <li><a href="#" class="text-white">Sun Block Cream</a></li>
+                    </ul>
                 </div>
-              </div>
             </div>
-          </div>
-          <div class="social_icon">
-            <ul>
-              <li>
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-              </li>
-            </ul>
-          </div>
+
+            <!-- Social Icons Section -->
+            <div class="social_icon text-center mt-4">
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="fa fa-instagram fa-2x"></i></a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <!-- Footer Section End -->
-    
+
     <!-- Copyright Section Start -->
     <div class="copyright_section">
-        <div class="container">
-          <p class="copyright_text">
-            2024 All Rights Reserved.
-            <a href="https://html.design"></a>
-          </p>
+        <div class="container text-center">
+            <p class="copyright_text">
+                2024 All Rights Reserved.
+                <a href="https://html.design" class="text-white">HTML Design</a>
+            </p>
         </div>
     </div>
     <!-- Copyright Section End -->
 </body>
+
 </html>
