--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="carousel-item">
+            <div class="carousel-item">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6">
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
             <!-- Add more carousel items here -->
         </div>
     </div>
