updating About | Contact pages

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <h1 class="banner_taital">Brightening <br />FaceWash</h1>
-                            <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+                            <!-- <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p> -->
                         </div>
                         <div class="col-sm-6">
                             <div class="banner_img">
@@ -103,7 +103,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <h1 class="banner_taital">SunBlock <br />Cream</h1>
-                            <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+                            <!-- <p class="banner_text">Ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p> -->
                         </div>
                         <div class="col-sm-6">
                             <div class="banner_img">
