--- a/products.html
+++ b/products.html
@@ -233,7 +233,7 @@
                 <div class="col-sm-12">
                     <h1 class="product_taital">Our Products</h1>
                     <p class="product_text">
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        Checkout Our Latest Products
                     </p>
                 </div>
             </div>
