--- a/user-Profile.html
+++ b/user-Profile.html
@@ -12,7 +12,7 @@
     <style>
         .profile-container {
             max-width: 600px;
-            margin: 50px auto;
+            /* margin: 50px auto; */
             padding: 30px;
             border-radius: 10px;
             background-color: #ffffff;
@@ -143,7 +143,7 @@
         }
     </script>
     <script src="./scripts.js"></script>
-    
+    <script src="./js/cart.js"></script>
 </body>
 
 </html>
