--- a/about.html
+++ b/about.html
@@ -87,6 +87,7 @@
     <div id="footer-container"></div>
     <!-- Footer section end -->
     <!-- Javascript files-->
+     <script src="./scripts.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
