--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,8 @@
     <div id="footer-container"></div>
     <!-- Footer section end -->
     <!-- Javascript files-->
+
+    <script src="./scripts.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
@@ -115,5 +117,6 @@
         document.getElementById("mySidenav").style.width = "0";
       }
     </script>
+    
   </body>
 </html>
