--- a/checkout.html
+++ b/checkout.html
@@ -8,24 +8,22 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/checkout-custom.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="css/cart.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
 </head>
 
 <body>
     <!-- Reusable Header -->
     <div id="header-container">
         <span id="cart-count">0</span>
-    </div> <!-- Placeholder for dynamic header -->
+    </div>
 
     <!-- Checkout Form -->
     <div class="container">
-        <form id="checkout-form">
+        <form id="checkout-form" enctype="multipart/form-data">
             <div class="row">
                 <!-- Billing Address -->
                 <div class="col-md-6">
                     <div class="section billing-address">
-                        <h2>1. Billing Address</h2>
+                        <h2>Billing Address</h2>
                         <div class="form-group">
                             <label for="first-name">First Name</label>
                             <input type="text" id="first-name" class="form-control" required />
@@ -64,7 +62,7 @@
                 <!-- Payment Method -->
                 <div class="col-md-6">
                     <div class="section payment-method">
-                        <h2>2. Payment Method</h2>
+                        <h2>Payment Method</h2>
                         <div class="form-check">
                             <input type="radio" id="cod" name="payment-method" value="COD" class="form-check-input" checked />
                             <label for="cod" class="form-check-label">
@@ -91,33 +89,43 @@
                         </div>
 
                         <!-- Dynamic Payment Sections -->
-                        <div id="bank-details" class="mt-3" style="display: none">
-                            <div class="form-group">
-                                <label for="bank-account">Bank Account Number</label>
-                                <input type="text" id="bank-account" class="form-control" />
-                            </div>
+                        <div id="bank-details" class="mt-3" style="display: none;">
+                            <h5>Bank Transfer Instructions:</h5>
+                            <p>Please transfer the total amount to the following bank account:</p>
+                            <ul>
+                                <li>Bank Name: XYZ Bank</li>
+                                <li>Account Number: 1234567890</li>
+                                <li>Branch: Main Branch</li>
+                                <li>Account Holder: Anaya Organics</li>
+                            </ul>
+                            <label for="proof-of-payment">Upload Proof of Payment</label>
+                            <input type="file" id="proof-of-payment" name="proofOfPayment" accept="image/*" />
                         </div>
-                        <div id="easypaisa-details" class="mt-3" style="display: none">
-                            <div class="form-group">
-                                <label for="easypaisa-phone">Easypaisa Phone Number</label>
-                                <input type="text" id="easypaisa-phone" class="form-control" />
-                            </div>
+
+                        <!-- Easypaisa Payment Details -->
+                        <div id="easypaisa-details" class="mt-3" style="display: none;">
+                            <label for="easypaisa-phone">Easypaisa Phone Number</label>
+                            <input type="text" id="easypaisa-phone" class="form-control" />
+                            <label for="easypaisa-proof">Upload Easypaisa Proof of Payment</label>
+                            <input type="file" id="easypaisa-proof" name="proofOfPayment" accept="image/*" />
                         </div>
-                        <div id="jazzcash-details" class="mt-3" style="display: none">
-                            <div class="form-group">
-                                <label for="jazzcash-phone">JazzCash Phone Number</label>
-                                <input type="text" id="jazzcash-phone" class="form-control" />
-                            </div>
+
+                        <!-- JazzCash Payment Details -->
+                        <div id="jazzcash-details" class="mt-3" style="display: none;">
+                            <label for="jazzcash-phone">JazzCash Phone Number</label>
+                            <input type="text" id="jazzcash-phone" class="form-control" />
+                            <label for="jazzcash-proof">Upload JazzCash Proof of Payment</label>
+                            <input type="file" id="jazzcash-proof" name="proofOfPayment" accept="image/*" />
                         </div>
                     </div>
 
                     <!-- Review Your Order -->
                     <div class="section review-order mt-4">
-                        <h2>3. Review Your Order</h2>
+                        <h2>Review Your Order</h2>
                         <div id="order-summary" class="border p-3">
                             <!-- Order items will be dynamically inserted here -->
                             <!-- Subtotal and Total -->
-                            <div class="summary-totals mt-4">
+                            <div class="summary-totals">
                                 <div class="d-flex justify-content-between">
                                     <p>Subtotal</p>
                                     <p><strong id="subtotal-amount">PKR 0</strong></p>
@@ -150,8 +158,8 @@
      <script src="./js/config.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/checkout.js"></script> <!-- Ensure this path is correct -->
-    <script src="scripts.js"></script> <!-- Script to load header and footer -->
+    <script src="./scripts.js"></script>
+    <script src="js/checkout.js"></script>
 </body>
 
 </html>
